ATE-2 Week 2 (Stacks, Queues, Sorts)
Added simple queue implementation based on circular, doubly-linked
list.